--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -2,24 +2,81 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
+    	<meta name="description" content="Relaxr">
+    	<meta name="keywords" content="assistant, scheduler, excel">
 
-		<title>Blank Template</title>
+		<title>Relaxr</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
-
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	</head>
 	<body>
 		<div id="container">
-			<header>
-				<h1>Blank Template</h1>
-				<h2>Just another blank template</h2>
-			</header>
+			<div id="header">
+				<nav>
+					<div class="flex-row">
+						<div class="flex-column-nav">
+							<h1>Relaxr</h1>
+						</div>
+					</div>
+				</nav>
+
+				<header>
+					<div class="flex-row-2">
+						<h2>Get piece of mind with a single tap</h2>
+					</div>
+					<div class="flex-row-3">
+						<div class="flex-column-button">
+							<h3>Get it Now</h3>
+						</div>
+					</div>
+				</header>
+			</div>
+			<div id="benefits">
+				<div>
+					
+					<h4>Benefits</h4>
+					<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+					<ul>
+						<li>Schedule meetings for you</li>
+						<li>Excel automation to complete your work for you</li>
+						<li>Responds to emails on your behalf</li>
+						<li>Does all your work for you with our revolutionary AI technology</li>
+					</ul>
+
+				</div>
+			</div>
+			<div class="flex-row-blockquote">
+				<div class="flex-column-blockquote-1">
+				</div>
+					<div class="flex-column-blockquote-2">
+						<div>
+							<h5>Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.</h5>
+							<h6>- Amanda, Intuit</h6>
+						</div>
+					</div>	
+				
+				<div class="flex-column-blockquote-1">
+				</div>
+			</div>
+			<div class="flex-row-signup">
+				<div class="sign-up-button">
+					<h7>Sign Up Now!</h7>
+				</div>
+			</div>
 			<footer>
-				&copy; Footer Goes Here
+					<div class="footer-logo">
+						<h8>Relaxr</h8>
+					</div>
+					<div class="footer-social">
+							<img src="images/twitter.png">
+							<img src="images/facebook.png">
+					</div>	
+					<div class="footer-copy">
+						<h9>Copyright 2015. Relaxr.</h9>
+					</div>
 			</footer>
 		</div><!-- #container -->
 	</body>
